--- a/index.html
+++ b/index.html
@@ -81,11 +81,27 @@
                         <p class="desc">5 Star Ratings (2k+ Review)</p>
                     </div>
                     <div class="imaes">
-                        <img src="./assets/img/meundes.svg" alt="MeUndies" />
-                        <img src="./assets/img/slack.svg" alt="Slack" />
-                        <img src="./assets/img/amazon.svg" alt="Amazon" />
-                        <img src="./assets/img/woo.svg" alt="Woo" />
-                        <img src="./assets/img/sitepoint.svg" alt="Sitepoint" />
+                        <a href="#!">
+                            <img
+                                src="./assets/img/meundes.svg"
+                                alt="MeUndies"
+                            />
+                        </a>
+                        <a href="#!">
+                            <img src="./assets/img/slack.svg" alt="Slack" />
+                        </a>
+                        <a href="#!">
+                            <img src="./assets/img/amazon.svg" alt="Amazon" />
+                        </a>
+                        <a href="#!">
+                            <img src="./assets/img/woo.svg" alt="Woo" />
+                        </a>
+                        <a href="#!">
+                            <img
+                                src="./assets/img/sitepoint.svg"
+                                alt="Sitepoint"
+                            />
+                        </a>
                     </div>
                 </div>
             </div>
